--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.bg-img{
+  position:absolute; 
+  right:0;
+  bottom:0;
+  opacity:0.2;
+  height: 45vh;
+}
+
+
+@media screen and (min-width:1024px){
+  .bg-img{
+    
+    height:65vh;
+    
+  }
+}
+
