--- a/src/global.scss
+++ b/src/global.scss
@@ -1,4 +1,24 @@
 .page{
     //margin-top: 3em;
     height: 80%;
+
+    .screen-sm{
+        display: none;
+    }
+
+    .screen-lg{
+        display: block;
+    }
+
+    @media (max-width: 768px) {
+        margin-top:20%;
+
+        .screen-sm{
+            display: block;
+        }
+    
+        .screen-lg{
+            display: none;
+        }
+    }
 }
