--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -3,15 +3,72 @@
     justify-content: center;
     align-items: center;
     .card{
-        background-color: red;
+        //background-color: red;
         height: 100%;
-        width: 80%;
+        width: 50vw;
         display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
+        // flex-direction: column;
+        // justify-content: flex-end;
+        position: relative;
+        
+        #portrait-container{
+            height: 100%;
+            
+            width:auto;
+            z-index: 3;
+            position: relative;
+
+            img{
+                height: 100%;
+                position: absolute;
+                right: -5em;
+                bottom:0;
+            }
+        }
+
+        
+
         .inner-card{
-            height: 70%;
-            background-color: blue;
+            background: rgba(195, 195, 195, 0.25);
+            //box-shadow: 0 8px 5px 0 rgba(31, 38, 135, 0.37);
+            backdrop-filter: blur( 4px );
+            -webkit-backdrop-filter: blur( 4px );
+
+            display:flex;
+            align-items: center;
+            padding: 5em;
+            margin: 5em 0;
+
+            #text-container{
+                padding: 3em 0;
+                p{
+                    text-align: justify;
+                }
+            }
+
+            
+        }
+    }
+
+    @media (max-width: 768px) {
+        .card{
+            width: 80vw;
+            flex-direction: column;
+
+            #portrait-container{
+                
+                height: 100%;
+                width:auto;
+                z-index: 3;
+                position: relative;
+    
+                img{
+                    height: 20vh;
+                   
+                }
+            }
+    
         }
     }
 }
+
