--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
+html, body {
+  height: 100%; width: 100%;
+  padding: 0; margin: 0;
+  position: relative;
+}
+
+body {
+  background: #FFF url(assets/Ninja-transparent.png) no-repeat bottom right;
+  background-size: 45vh;
+  background-attachment: fixed;
+}
+
+/* body::before {
+  content: "";
+  background: #FFF url(assets/Ninja-transparent.png) no-repeat bottom right;
+  background-size: 45vh;
+  background-attachment: fixed;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.2;
+} */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +30,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
@@ -14,7 +40,7 @@ code {
 
 
 .bg-img{
-  position:absolute; 
+  position:absolute;
   right:0;
   bottom:0;
   opacity:0.2;
@@ -23,10 +49,15 @@ code {
 
 
 @media screen and (min-width:1024px){
+  body{
+    background-size: 65vh;
+  }
+
+
   .bg-img{
-    
+
     height:65vh;
-    
+
   }
 }
 
