--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,47 @@
 html, body {
-  height: 100%; width: 100%;
+  /* height: 100%; width: 100%; */
   padding: 0; margin: 0;
   position: relative;
 }
 
 body {
-  background: #FFF url(assets/Ninja-transparent.png) no-repeat bottom right;
+  width: 100%;
+  width: 100%;
+  position: relative;
+  /* background: #FFF url(assets/Ninja-transparent.png) no-repeat bottom right;
   background-size: 45vh;
-  background-attachment: fixed;
+  background-attachment: fixed; */
 }
 
-/* body::before {
+/* .wantOverlay {
+  width: 200px;
+  height: 100px;
+  overflow-y: scroll;
+  position: relative;
+} */
+
+/* .wantOverlay::before {
+  content: '';
+  position: fixed;
+  width: inherit;
+  height: inherit;
+  background: rgba(150, 150, 150, .45);
+} */
+
+body::before {
   content: "";
   background: #FFF url(assets/Ninja-transparent.png) no-repeat bottom right;
   background-size: 45vh;
   background-attachment: fixed;
-  position: absolute;
+  width: inherit;
+  height: inherit;
+  position: fixed;
   top: 0px;
   right: 0px;
   bottom: 0px;
   left: 0px;
   opacity: 0.2;
-} */
+}
 
 body {
   margin: 0;
