--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -36,8 +36,8 @@
 
         .inner-card{
             background: rgba(250, 249, 246, 0.25);
-            backdrop-filter: blur(0.5em);
-            -webkit-backdrop-filter: blur( 4px );
+            backdrop-filter: blur(0.2em);
+            -webkit-backdrop-filter: blur( 0.2em);
 
             display:flex;
             align-items: center;
@@ -54,6 +54,9 @@
                 display: flex;
 
                 #text-container{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: baseline;
                     padding: 0 2em; //3em 0;
                     width: 50%;
                     p{
@@ -62,7 +65,10 @@
                 }
 
                 #skills-container{
-                    padding: 3em 0;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: baseline;
+                    padding: 0 2em;
                     width: 50%;
                     p{
                         text-align: justify;
@@ -82,9 +88,8 @@
     }
 
     @media (max-width: 600px) {
-        .inner-card-content{
-            flex-wrap: wrap;
-        }
+        
+        
     }
 
 
@@ -113,16 +118,23 @@
                 margin: 0;
                 padding: 1em;
 
+                .inner-card-content{
+                    flex-wrap: wrap;
+
+
+                    #text-container{
+                        padding: 1em;
+                        width: 100% !important;
+                    }
+    
+                    #skills-container{
+                        padding: 1em;
+                        margin-top: 2em;
+                        width: 100% !important; 
+                    }
+                }
+
                 
-
-                #text-container{
-                    padding: 1em;
-                    width: 100% !important;
-                }
-
-                #skills-container{
-                    width: 100% !important; 
-                }
             }
     
         }
