--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+:root{
+  --background: #bfcbcb;
+  --primary: #202630;
+  --accent: #ffbf19;
+  --light: #eeeeee;
+
+  --black: #09090c;
+  --grey: #a4b2bc;
+  --white: #fff;
+}
+
+
+
 html, body {
   padding: 0; margin: 0;
   position: relative;
@@ -29,6 +42,7 @@ body::before {
   bottom: 0px;
   left: 0px;
   opacity: 0.2;
+  z-index: -1;
 }
 
 code {
