--- a/src/components/skillschart/skillschart.scss
+++ b/src/components/skillschart/skillschart.scss
@@ -68,7 +68,7 @@
         height: 30px;
         margin-bottom: 10px;
     
-        background: linear-gradient(to left, #4cb8c4, #3cd3ad);
+        background: linear-gradient(to left, var(--primary-step-500), var(--primary));
         border-top-right-radius: $border-rad;
         border-bottom-right-radius: $border-rad;
         opacity: 0;
@@ -89,7 +89,7 @@
     .chart__label {
         padding-left: 10px;
         line-height: 30px;
-        color: white;
+        color: var(--text-bg);
     }
     
     //Keyframes
