--- a/src/pages/about.scss
+++ b/src/pages/about.scss
@@ -1,3 +1,5 @@
+@import '../mixins.scss';
+
 #about-page{
     display: flex;
     justify-content: center;
@@ -35,6 +37,7 @@
         
 
         .inner-card{
+            position: relative;
             background: rgba(250, 249, 246, 0.25);
             backdrop-filter: blur(0.2em);
             -webkit-backdrop-filter: blur( 0.2em);
@@ -43,13 +46,17 @@
             align-items: center;
             padding: 5em;
             margin: 5em 0;
-
-            border-radius: 50px;
+            //border-radius: 50px;
             //background: #e0e0e0;
             box-shadow:  0.1em 0.1em 0.2em rgb(250, 249, 246),
                         -0.1em -0.1em 0.2em rgb(255, 255, 255);
 
-            border: 4px solid var(--text-dark);
+            //border: 2px solid var(--text-dark);
+            border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+        border:solid 7px #41403E;
+            
+
+
             .inner-card-content{
                 display: flex;
 
