--- a/src/pages/admin.scss
+++ b/src/pages/admin.scss
@@ -1,43 +1,141 @@
 #admin-page{
-    form{
-        display: flex;
-        flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-        .input {
+    .card{
+        min-width: 40vw;
+        max-width: 75vw;
+        display: flex;
+        width: fit-content;
+        position: relative;
+        justify-content: center;
+        align-items: center;
+        //border:1px solid black;
+        background: var(--background);
+        min-height: 30vh;
+        border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+        //border:dashed 2px grey;
+
+        &:after, &:before{
+            mix-blend-mode:soft-light;
+            filter:none;
+            z-index: -1;
+            content:'';
+            width:calc(100% + (10% * 2));
+            height:calc(100% + (10% * 2));
+            position: absolute;
+            display: block;
+            transform:translateX(-v) translateY(-10%);
+            border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+        }
+          
+        &:after{
+            background-color: var(--secondary);
+            clip-path: polygon(0 0, calc(100% - (5%)) calc(0% + (5%)), 100% 100%, calc(0% + (5%)) calc(100% - (5%)));
+        }
+        &:before {
+            background-color: var(--primary);
+              clip-path: polygon(calc(0% + (5%)) calc(0% + (5%)), 100% 0, calc(100% - (5%)) calc(100% - (5%)), 0 100%);
+        }
+
+
+        form{
             display: flex;
-            flex-direction: column-reverse;
-            position: relative;
-            padding-top: 1.5rem;
-            &+.input {
-                margin-top: 1.5rem;
-            }
+            flex-direction: column;
     
-            .input-label {
-                color: #8597a3;
-                position: absolute;
-                top: 1.5rem;
-                transition: .25s ease;
-            }
-            
-            .input-field {
-                border: 0;
-                z-index: 1;
-                background-color: transparent;
-                border-bottom: 2px solid #eee; 
-                font: inherit;
-                font-size: 1.125rem;
-                padding: .25rem 0;
-                &:focus, &:valid {
-                    outline: 0;
-                    border-bottom-color: #6658d3;
-                    &+.input-label {
-                        color: #6658d3;
-                        transform: translateY(-1.5rem);
+            .input {
+                display: flex;
+                flex-direction: column-reverse;
+                position: relative;
+                padding-top: 1.5rem;
+                &+.input {
+                    margin-top: 1.5rem;
+                }
+        
+                .input-label {
+                    color: #8597a3;
+                    position: absolute;
+                    top: 1.5rem;
+                    transition: .25s ease;
+                }
+                
+                .input-field {
+                    border: 0;
+                    z-index: 1;
+                    background-color: transparent;
+                    border-bottom: 2px solid #eee; 
+                    font: inherit;
+                    font-size: 1.125rem;
+                    padding: .25rem 0;
+                    &:focus, &:valid {
+                        outline: 0;
+                        border-bottom-color: #6658d3;
+                        &+.input-label {
+                            color: #6658d3;
+                            transform: translateY(-1.5rem);
+                        }
                     }
                 }
             }
+
+            .file-area {
+                width: 100%;
+                position: relative;
+                
+                input[type=file] {
+                  position: absolute;
+                  width: 100%;
+                  height: 100%;
+                  top: 0;
+                  left: 0;
+                  right: 0;
+                  bottom: 0;
+                  opacity: 0;
+                  cursor: pointer;
+                }
+                
+                .file-dummy {
+                  width: 100%;
+                  padding: 30px;
+                  background: rgba(255,255,255,0.2);
+                  border: 2px dashed rgba(255,255,255,0.2);
+                  text-align: center;
+                  transition: background 0.3s ease-in-out;
+                  
+                  .success {
+                    display: none;
+                  }
+                }
+                
+                &:hover .file-dummy {
+                  background: rgba(255,255,255,0.1);
+                }
+                
+                input[type=file]:focus + .file-dummy {
+                  outline: 2px solid rgba(255,255,255,0.5);
+                  outline: -webkit-focus-ring-color auto 5px;
+                }
+                
+                input[type=file]:valid + .file-dummy {
+                  border-color: rgba(0,255,0,0.4);
+                  background-color: rgba(0,255,0,0.3);
+              
+                  .success {
+                    display: inline-block;
+                  }
+                  .default {
+                    display: none;
+                  }
+                }
+              }
+              
+              
+              
         }
     }
+
+    
 
     
     
