--- a/src/pages/admin.scss
+++ b/src/pages/admin.scss
@@ -4,6 +4,8 @@
     align-items: center;
 
     .card{
+      display: flex;
+      flex-direction: column;
         min-width: 40vw;
         max-width: 75vw;
         display: flex;
@@ -49,6 +51,8 @@
                 flex-direction: column-reverse;
                 position: relative;
                 padding-top: 1.5rem;
+
+                
                 &+.input {
                     margin-top: 1.5rem;
                 }
@@ -78,6 +82,53 @@
                     }
                 }
             }
+
+            .toggle-container{
+              .toggle{
+                width: 0;
+                height: 0;
+                visibility: hidden;
+  
+                &:checked + .toggle-label::after{
+                  left:100%;
+                  transform: translateX(-100%);
+                }
+  
+                &:checked+.toggle-label{
+                  background-color: var(--secondary);
+                }
+              }
+
+              .toggle-label{
+                width: 2rem;
+                height: 1rem;
+                background-color: var(--primary);
+                border-radius: 0.5rem;
+                position: relative;
+                cursor: pointer;
+                transition: 0.5s;
+                left: 0%;
+                box-shadow: 0 0 5px var(--primary);
+
+                &::after{
+                  content: '';
+                  width: 1rem;
+                  height: 1rem;
+                  background-color: var(--primary-step-950);
+                  position: absolute;
+                  border-radius: 0.5rem;
+                  top:0;
+                  left: 0;
+                  transition: 0.5s;
+                }
+
+                &:active::after{
+                  width: 1rem;
+                }
+              }
+
+            }
+            
 
             .file-area {
                 width: 100%;
@@ -132,6 +183,112 @@
               
               
               
+        }
+
+        .thumbnails-container{
+          display: flex;
+          flex-wrap: wrap;
+          
+          .thumbnail{
+            height: 100px;
+            width: 100px;
+            margin:1em;
+            border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+            border: 2px solid var(--primary-step-950);
+            position: relative;
+
+            // &::before {
+            //   content: ''; /* set content to empty */
+            //   display: block; /* display is inline by default */
+            //   position: absolute;
+            //   background-color: black;
+            //   background-size: 100px 100px;
+            //   background-repeat: no-repeat;
+            //   background-position: center center;
+            //   width: 100px;
+            //   height: 100px;
+            //   z-index: 100;
+            //   outline: none;
+            //   cursor: pointer;
+            //   opacity: 0;
+            // }
+        
+            // &:hover {
+            //   &::before {
+            //     opacity: 0.2;
+            //     mix-blend-mode:multiply;
+            //   }
+
+            //   transform: scale(1.2);
+            // }
+
+            .thumbnail-img{
+              height: 100%;
+              width: 100%;
+              object-fit: contain;
+              
+            }
+
+            .thumbnail-overlay{
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              background: rgba(0, 0, 0, 0.6);
+              color: #ffffff;
+              font-family: 'Quicksand', sans-serif;
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              opacity: 0;
+              transition: opacity 0.25s;
+              backdrop-filter: blur(5em);
+              border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+              &>*{
+                transform: translateY(20px);
+                transition: transform 0.25s;
+              }
+
+              &:hover{
+                opacity: 1;
+                cursor: pointer;
+                &>*{
+                  transform:translateY(0);
+                }
+              }
+
+              .thumbnail-icon{
+                color:red;
+                font-size: 1.2em;
+              }
+
+            }
+            
+
+            // img{
+            //   height: 100%;
+            //   width: 100%;
+            //   object-fit: contain;
+
+              
+            // }
+
+            button{
+              position: absolute;
+              top: -5px;
+              right: -5px;
+              height:20px;
+              width:20px;
+              border-radius: 50%;
+              background: linear-gradient(72deg, #4e4a4a, #ff0000);
+              color:white;
+              &:hover{
+                transform: scale(1.2);
+              }
+            }
+          }
         }
     }
 
